Regions and Partner registration
